[project]
name = "trade-master-sdk"
version = "0.1.0"
description = "Trade master Python SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff check . --fix && ruff format ."


[tool.ruff]
line-length = 79
respect-gitignore = false

[tool.ruff.lint]
preview = true
select = ["A", "B", "C", "E", "F", "I", "PL", "PT", "Q", "S", "T", "W"]
ignore = ["E501", "PLR6301"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
preview = true
quote-style = "single"
